# HTTP-Request-Server-Client

./: CMakeLists.txt  Client.cpp  Client.h  HTTPBuilder.cpp  HTTPBuilder.h  IO.cpp  IO.h  Parser.cpp  Parser.h  README.md  Server.cpp  Server.h  ServerClientUtils.cpp  ServerClientUtils.h  clientMain.cpp  serverMain.cpp  test.txt
